--- a/values.yaml
+++ b/values.yaml
@@ -11,8 +11,6 @@ istio:
     enabled: false
 
 ingress:
-    annotations:
-        kubernetes.io/ingress.class: nginx
     labels: {}
     host: ''
     tlsSecretName: ''
@@ -45,23 +43,11 @@ carts:
             cpu: 300m
             memory: 2000Mi
 
-cataloguedb:
-    image:
-        repo: weaveworksdemos/catalogue-db
-        tag: 0.3.0
-    resources:
-        limits:
-            cpu: 300m
-            memory: 1000Mi
-        requests:
-            cpu: 100m
-            memory: 300Mi
-
 catalogue:
     image:
-        repo: weaveworksdemos/catalogue
-        tag: 0.3.5
-    containerPort: 80
+        repo: gcr.io/eco-seeker-328005/catalogue
+        tag: latest
+    containerPort: 8080
     resources:
         limits:
             cpu: 100m
